# Varia

./: .gitignore  CMakeLists.txt
include/varia/: logging.hpp  python.hpp  script.hpp  varia.hpp
src/: logging.cpp  lua.cpp  lua.hpp  main.cpp  python.cpp  python.hpp  script.hpp  varia.cpp  varia.hpp  variable.cpp  variable.hpp
tests/: test_lua.cpp  test_lua.lua  test_python.cpp  test_python.py
